<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#000">
    <TextView
        android:id="@+id/iamon"
        android:textColor="#FFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iamon"/>
	<ImageButton
        android:id="@+id/fbb"
        android:src="@drawable/facebook"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/facebookdes"
        />
    <ImageButton
        android:id="@+id/linkdb"
        android:src="@drawable/linkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        android:contentDescription="@string/linkedindes"/>
    <ImageButton
        android:id="@+id/googleb"
        android:src="@drawable/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/googledes" />
    <ImageButton
        android:id="@+id/bloggerb"
        android:src="@drawable/blogger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/bloggerdes" /> 

</LinearLayout>
