<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <TextView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/intro" 
        android:textColor="#FFF"   
        android:textSize="18sp"
        android:padding="15dip"  
        />
    <Button
        android:id="@+id/button1"
        android:text="@string/whatido"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="bottom"
        android:gravity="center"
        android:color="#FFF"
        android:textColor="#0CF" />
    <Button
        android:id="@+id/button2"
        android:text="@string/iamon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:color="#FFF" 
        android:gravity="center"
        android:layout_gravity="bottom" 
        android:textColor="#0CF"/>
</LinearLayout>